--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>remotty</title>
   </head>
   <body ng-app="app" ng-controller="RootCtrl as root">
+    <!-- この script は Chromium optimization のバグで webView が表示されないので追加している -->
     <script>console.log("Hello World");</script>
     <webview id="mainWebview" src="https://www.remotty.net//" autosize="on"></webview>
     <style>
