--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>remotty</title>
+    <link rel='stylesheet' href='./index.css'>
   </head>
   <body ng-app="app" ng-controller="RootCtrl as root">
     <!-- この script は Chromium optimization のバグで webView が表示されないので追加している -->
     <script>console.log("Hello World");</script>
     <webview id="mainWebview" src="https://www.remotty.net//" autosize="on"></webview>
-    <style>
-       webview {
-         position: absolute;
-         top: 0;
-         right: 0;
-         bottom: 0;
-         left: 0;
-       }
-     </style>
   </body>
 </html>
