--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='./index.css'>
   </head>
   <body ng-app="app" ng-controller="RootCtrl as root">
-    <webview id="mainWebview" src="https://www.remotty.net//" autosize="on"></webview>
+    <webview id="mainWebview" src="https://www.remotty.net" autosize="on"></webview>
     <script src='./index.js'></script>
   </body>
 </html>
